--- a/Stylish Portfolio - Start Bootstrap Theme.html
+++ b/Stylish Portfolio - Start Bootstrap Theme.html
@@ -98,9 +98,9 @@
 <section id="services" class="services bg-primary">
     <div class="container">
         <div class="row text-center">
-            <div class="col-lg-120 col-lg-offset-1">
-                <h2 id="services_h2">ЗАЧЕМ МНЕ ЭТО?</h2>
 
+                <h2 id="services_h2">ЗАЧЕМ МНЕ ЭТО?</h2>
+                <div class="col-sm-12">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 circle_marg">
                         <div class="service-item">
@@ -120,7 +120,7 @@
                                 Саморазвитие
                             </h4>
 
-                            <p class="font_under_circle">Наш психолог поможет Вам грамотно и с позитивом поставить цели .</p>
+                            <p class="font_under_circle">Наш психолог поможет Вам грамотно и с позитивом поставить цели</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 circle_marg">
@@ -149,6 +149,7 @@
                     </div>
                 </div>
                 <!-- /.row (nested) -->
+                <div>
             </div>
             <!-- /.col-lg-10 -->
         </div>
