--- a/Stylish Portfolio - Start Bootstrap Theme.html
+++ b/Stylish Portfolio - Start Bootstrap Theme.html
@@ -73,7 +73,7 @@
         <br>
 
         <div id="div_first_button">
-            <a href="/#about" class="btn" id="button_a_blok1">Узнать больше</a>
+            <a href="/#about" class=" btns button_a_blok1">Узнать больше</a>
         </div>
     </div>
 </header>
@@ -99,8 +99,9 @@
     <div class="container">
         <div class="row text-center">
 
-                <h2 id="services_h2">ЗАЧЕМ МНЕ ЭТО?</h2>
-                <div class="col-sm-12">
+            <h2 id="services_h2">ЗАЧЕМ МНЕ ЭТО?</h2>
+
+            <div class="col-sm-12">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 circle_marg">
                         <div class="service-item">
@@ -120,18 +121,20 @@
                                 Саморазвитие
                             </h4>
 
-                            <p class="font_under_circle">Наш психолог поможет Вам грамотно и с позитивом поставить цели</p>
+                            <p class="font_under_circle">Наш психолог поможет Вам грамотно и с позитивом поставить
+                                цели</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 circle_marg">
                         <div class="service-item">
-                            <img src="images/blok3/i4.png"  class="circle">
+                            <img src="images/blok3/i4.png" class="circle">
 
                             <h4 class="text_for_cirlce">
                                 Придумайте идеальный Новый год
                             </h4>
 
-                            <p class="font_under_circle" id="new_year_text">Как бы Вы хотели провести новый год Вашей мечты? Отпишитесь в комментариях.
+                            <p class="font_under_circle" id="new_year_text">Как бы Вы хотели провести новый год Вашей
+                                мечты? Отпишитесь в комментариях.
                                 Самые активные получат призы от нас, а также их предложения войдут в программу
                                 мероприятия</p>
                         </div>
@@ -144,18 +147,19 @@
                                 Путешествие
                             </h4>
 
-                            <p class="font_under_circle">Говорят, что для саморазвития и отдыха лучше нет ничего, чем путешествия.</p>
+                            <p class="font_under_circle">Говорят, что для саморазвития и отдыха лучше нет ничего, чем
+                                путешествия.</p>
                         </div>
                     </div>
                 </div>
                 <!-- /.row (nested) -->
                 <div>
+                </div>
+                <!-- /.col-lg-10 -->
             </div>
-            <!-- /.col-lg-10 -->
+            <!-- /.row -->
         </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
+        <!-- /.container -->
 </section>
 
 <!-- Callout -->
@@ -170,42 +174,69 @@
     <div id="for_opacity">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Our Work</h2>
+                <div class="col-lg-12  text-center">
+                    <h2 id="for_new_year">ЛУЧШИЕ ПРЕДЛОЖЕНИЯ О ПРОВЕДЕНИИ НОВОГО ГОДА</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4 col-lg-offset-1">
                             <div class="portfolio-item">
-                                <a href="http://ironsummitmedia.github.io/startbootstrap-stylish-portfolio/#">
-                                    <img class="img-portfolio img-responsive" src="./additions/portfolio-1.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive img-ramka" src="./images/blok5/mini6.jpg">
+                                <img class="img-portfolio img-responsive img-heart" src="./images/blok5/like.png">
+
+                                <div>
+                                    <h1 class="text_portfolio">Ирина Матвиенко</h1>
+
+                                    <p class="text_portfolio_p">Невероятно крутая идея!</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-7">
+                                        <a href="about" class=" btns button_for_blok_small5">Читать далее</a>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <p class="fonts_blok5">Facebook</p>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <p class="fonts_blok5">Vkontakte</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4 col-lg-offset-2">
                             <div class="portfolio-item">
-                                <a href="http://ironsummitmedia.github.io/startbootstrap-stylish-portfolio/#">
-                                    <img class="img-portfolio img-responsive" src="./additions/portfolio-2.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive img-ramka" src="./images/blok5/mini6.jpg">
+                                <img class="img-portfolio img-responsive" src="./images/blok5/like.png">
+
+                                <div>
+                                    <h1 class="text_portfolio">Ирина Матвиенко</h1>
+
+                                    <p class="text_portfolio_p">Невероятно крутая идея!</p>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-7">
+                                        <a href="about" class="btns button_for_blok_small5">Читать далее</a>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <p class="fonts_blok5">Facebook</p>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <p class="fonts_blok5">Vkontakte</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="http://ironsummitmedia.github.io/startbootstrap-stylish-portfolio/#">
-                                    <img class="img-portfolio img-responsive" src="./additions/portfolio-3.jpg">
-                                </a>
-                            </div>
+                        <div class="col-md-6 a_blok5 col-lg-offset-0">
+                            <a href="/#about" class=" btns button_for_blok_5">Добавить свое предложение</a>
                         </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="http://ironsummitmedia.github.io/startbootstrap-stylish-portfolio/#">
-                                    <img class="img-portfolio img-responsive" src="./additions/portfolio-4.jpg">
-                                </a>
-                            </div>
+                        <div class="col-md-6  a_blok5">
+                            <a href="/#about" class=" btns button_for_blok_5">Загрузить другие предложение</a>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
-                    <a href="http://ironsummitmedia.github.io/startbootstrap-stylish-portfolio/#" class="btn btn-dark">View
-                        More Items</a>
+
+                </div>
+                <div class="col-lg-12 col-lg-offset-1">
+
+
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -214,6 +245,34 @@
     </div>
     <!-- /.container -->
 </section>
+
+<!-- Images -->
+
+<section id="for_images" class="images">
+    <div class="container vertical">
+        <div class="row vertical_row text-center">
+
+            <img class="str_left" src="/images/blok6/strelka-vlevo.png">
+
+            <img class="img-ramka img_small_left" src="images/blok6/dance_woman.jpg">
+            <img class="img-ramka img_big" src="images/blok6/dance_woman.jpg">
+
+            <img class="img-ramka img_small_right" src="images/blok6/dance_woman.jpg">
+
+            <img class="str_right" src="/images/blok6/strelka-vpravo.png">
+            <div class="text-center">
+                <div class="row">
+                <ul class="slider_dots">
+                    <li class="dot"><img src="/images/blok6/ne-vybranny-kruzhochek.png"></li>
+                    <li class="dot dot_view"><img src="/images/blok6/knopka-vybrannaya.png"></li>
+                    <li class="dot"><img src="/images/blok6/ne-vybranny-kruzhochek.png"></li>
+                </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Call to Action -->
 <aside class="call-to-action bg-primary">
